fix: correct display alignment

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -465,7 +465,7 @@ html:not(.dark) {
 	margin-top: 0;
 	margin-bottom: 0;
 	padding-left: 2em;
-	list-style: disc;
+	list-style-type: revert;
 }
 
 #slideshow ol ol,
